appId: com.uniquedev.fitnesstrail
---
- launchApp:
    clearState: true
- tapOn: Profiles
- tapOn:
    id: add-profile
- tapOn:
    id: profile-name
- inputText: Alex
- tapOn:
    id: profile-age
- inputText: '30'
- tapOn:
    id: profile-height-cm
- inputText: '175'
- tapOn:
    id: profile-gender-woman
- tapOn:
    id: save-profile
- tapOn: BMI
- assertVisible: Start your BMI trail
- tapOn:
    id: add-bmi-measurement
- assertVisible: New Measurement
- tapOn:
    id: bmi-weight
- inputText: '70'
- tapOn:
    id: save-bmi-measurement
- assertVisible: '22.9'
- assertVisible: Healthy weight
- stopApp
- launchApp
- tapOn: BMI
- assertVisible: '22.9'
- tapOn: '70.00 kg'
- assertVisible: Edit Measurement
- tapOn: Pounds
- tapOn:
    id: bmi-weight
- eraseText
- inputText: '160'
- tapOn:
    id: save-bmi-measurement
- assertVisible: '23.7'
- assertVisible: '160.00 lb'
